added alt text to images

--- a/baby.html
+++ b/baby.html
@@ -9,6 +9,6 @@
    <!-- insert image of it's face-->
    <h2>Awww they're so cute! Look at that little <a href="face.html">face</a>.</h2>
 
-   <img src="images/yeti3.jpg" width="600">
+   <img src="images/yeti3.jpg" width="600" alt="a closer image of a small yeti figure on a desk">
 </body>
 </html>
