--- a/face.html
+++ b/face.html
@@ -8,6 +8,6 @@
 <body>
    <!-- insert close up of it's face-->
    <h3>It's so... <a href="close.html">captivating</a>... </h3>
-   <img src="images/yeti4.jpg" width="700">
+   <img src="images/yeti4.jpg" width="700" alt="an even closerer image of a small yeti figure on a desk">
 </body>
 </html>
