--- a/hatch.html
+++ b/hatch.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <!-- insert stock image of an egg hatching-->
-   <img src="images/egg.jpg" width="500">
+   <img src="images/egg.jpg" width="500" alt="a stock image of a chicken egg hatching">
 
    <h1>It's a</h1>
    <h2>It's a</h2>
