--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
    <h1>On my desk I have a little <a href="yeti.html">yeti figure</a>.</h1>
    <!-- insert picture here-->
-   <img src="images/yeti1.jpg" width="400">
+   <img src="images/yeti1.jpg" width="400" alt="an image of a small yeti figure on a desk">
 </body>
 </html>
