--- a/stop.html
+++ b/stop.html
@@ -9,7 +9,7 @@
    <!-- all you can see is their eyes-->
    
    <h5><a href="the_end.html">at last!</a></h5>
-   <img src="images/yeti5.jpg" width="900">
+   <img src="images/yeti5.jpg" width="900" alt="the yeti looking at the camera with all the knowledge of the universe">
    
    <!-- maybe insert a link to big yeti or something-->
 </body>
