--- a/yeti.html
+++ b/yeti.html
@@ -10,7 +10,7 @@
    <h1>It was one of those things that come in an egg</h1>
    <h1>and you have to put it in water for it to <a href="hatch.html">hatch</a>.</h1>
    <!-- insert closer image of yeti-->
-   <img src="images/yeti2.jpg" width="500">
+   <img src="images/yeti2.jpg" width="500" alt="an image of a small yeti figure on a desk, but a little closer">
 
 </body>
 </html>
