--- a/close.html
+++ b/close.html
@@ -8,6 +8,6 @@
 <body>
    <!-- insert even closer close up}-->
    <h4>i can't <a href="stop.html">look away</a> </h4>
-   <img src="images/yeti4.jpg" width="800">
+   <img src="images/yeti4.jpg" width="800" alt="an even closer image of a small yeti figure on a desk">
 </body>
 </html>
